--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,12 +5,12 @@ body {
 }
 
 header {
+  align-items: center;
   background: #1393f6;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
-  height: 56px;
-  display: flex;
-  align-items: center;
   color: #ffffff;
+  display: flex;
+  height: 56px;
 }
 
 .header__title {
@@ -18,17 +18,13 @@ header {
 }
 
 .container {
-  width: 90%;
   margin: 0 auto;
+  width: 90%;
 }
 
 .required:after {
   color: #ff0000;
   content: '*';
-}
-
-.form__tab {
-  padding: 15px;
 }
 
 .form__box {
@@ -37,8 +33,16 @@ header {
   margin: 16px auto;
 }
 
-.form__box fieldset {
+.form__holder {
+  padding: 15px;
+}
+
+.form__holder fieldset {
   border: 0;
+}
+
+#user-fields {
+  display: none;
 }
 
 .form__group {
@@ -57,7 +61,7 @@ header {
   border-radius: 7px;
   margin: 5px 0px;
   font-size: 16px;
-  padding-left: 5px;
+  padding: 13px 11px;
   background: #eff4fa;
   box-sizing: border-box;
   transition: all 500ms;
@@ -75,36 +79,47 @@ textarea.form__control {
 }
 
 .form__submit {
-  width: 100%;
-  height: 48px;
   background-color: #1393f6;
-  color: #fff;
-  background: blue;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 18px;
-  border-radius: 7px;
   border: 0;
+  border-radius: 7px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
+  color: #fff;
+  cursor: pointer;
+  height: 48px;
+  font-size: 18px;
+  font-weight: bold;
   margin-top: 7px;
+  outline: none;
+  text-transform: uppercase;
+  transition: all 500ms;
+  width: 100%;
+}
+
+.form__submit:hover {
+  background-color: #1272d5;
+}
+
+.form__message {
+  color: #b24141;
+  display: none;
 }
 
 .form__tabs {
+  background-color: #dddddd;
   display: flex;
   justify-content: space-around;
-  margin: 0px;
   list-style: none;
+  margin: 0px;
   padding-left: 0px;
-  background-color: #dddddd;
 }
 
 .form__tabs-item {
-  text-align: center;
-  height: 50px;
-  flex: 1;
   align-items: center;
   display: flex;
+  flex: 1;
   justify-content: center;
+  height: 50px;
+  text-align: center;
 }
 
 .form__tabs-item--active {
@@ -120,9 +135,9 @@ li:nth-child(2).form__tabs-item--active {
 }
 
 footer {
-  text-align: center;
   border-top: 1px solid rgba(0, 0, 0, .15);
   padding: 5px 0px;
+  text-align: center;
 }
 
 a {
